// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`combineOverlappingSegments 1`] = `
[
  {
    "end": 87,
    "start": 0,
  },
  {
    "end": 784,
    "start": 229,
  },
  {
    "end": 1487,
    "start": 838,
  },
  {
    "end": 1831,
    "start": 1561,
  },
  {
    "start": 2027,
  },
]
`;

exports[`converts segments to chapters with gaps 1`] = `
[
  {
    "end": 104.612,
    "start": 0,
  },
  {
    "end": 189.053,
    "name": "label 1",
    "start": 104.612,
  },
  {
    "end": 300.448,
    "start": 189.053,
  },
  {
    "end": 476.194,
    "name": "label 2",
    "start": 300.448,
  },
  {
    "end": 567.075,
    "start": 476.194,
  },
  {
    "end": 704.264,
    "name": "label 3",
    "start": 567.075,
  },
  {
    "end": 855.455,
    "name": "label 4",
    "start": 704.264,
  },
]
`;

exports[`converts segments to chapters with no gaps when adjacent 1`] = `
[
  {
    "end": 2,
    "name": "label 1",
    "start": 0,
  },
  {
    "end": 3,
    "name": "label 2",
    "start": 2,
  },
]
`;

exports[`converts segments to chapters with single long segment 1`] = `
[
  {
    "end": 1,
    "name": "label 1",
    "start": 0,
  },
]
`;

exports[`invertSegments > adjacent 1`] = `
[
  {
    "end": 2,
    "start": 0,
  },
  {
    "end": 100,
    "name": "Segment 2",
    "start": 4,
  },
]
`;

exports[`invertSegments > none 1`] = `[]`;

exports[`invertSegments > normal 1`] = `
[
  {
    "end": 1,
    "start": 0,
  },
  {
    "end": 2,
    "name": "Marker 1",
    "start": 1,
  },
  {
    "end": 5,
    "name": "Segment 2",
    "start": 3,
  },
  {
    "end": 100,
    "name": "Segment 3",
    "start": 5,
  },
]
`;

exports[`invertSegments > overlap 1 1`] = `[]`;

exports[`invertSegments > overlap 2 1`] = `[]`;

exports[`invertSegments > undefined duration 1`] = `
[
  {
    "end": 3,
    "start": 0,
  },
  {
    "end": undefined,
    "name": "Marker 1",
    "start": 3,
  },
]
`;

exports[`invertSegments > undefined duration 2 1`] = `[]`;
